refactor: list 불변성 추가